Edited GUI.